Adjusted padding offset for video resizing

--- a/_themes/tm3/templates/adams-concerto.html
+++ b/_themes/tm3/templates/adams-concerto.html
@@ -1,6 +1,6 @@
 {{ theme:partial half_size="true" src="hero" use_context="true" }}
 
-<main id="content" role="main" style="background-color: {{ background_color }};">
+<main class="pad-vertical" id="content" role="main" style="background-color: {{ background_color }};">
     {{ if booking_title }}
     <div class="row pad">
         <h2 class="display-1">{{ booking_title }}</h2>
