--- a/_themes/tm3/css/recordings.css
+++ b/_themes/tm3/css/recordings.css
@@ -32,8 +32,8 @@
     margin-bottom: 20px;
 }
 
-.js.screen-size-0 #content,
-.js.screen-size-1 #content
+.js.screen-size-0 #site-wrapper,
+.js.screen-size-1 #site-wrapper
 {
     bottom: 0;
     left: 0;
@@ -42,7 +42,7 @@
     top: 0;
 }
 
-#content { padding: 40px 0; }
+#site-wrapper { padding: 40px 0; }
 #next-recording-overlay { opacity: 0; }
 #recordings-list { padding: 0; }
 #recordings-list .recording { margin-bottom: 90px; }
@@ -51,5 +51,5 @@
 
 @media (min-width: 768px)
 {
-    #content { padding: 120px 0 60px 0; }
+    #site-wrapper { padding: 120px 0 60px 0; }
 }
