Cleaned up some layout issues on Recordings

--- a/_themes/tm3/partials/recording.html
+++ b/_themes/tm3/partials/recording.html
@@ -37,7 +37,7 @@
                 <tr>
                     <td colspan="2">
                         <div class="pad-vertical text-center">
-                            <a class="button border" href="{{ recording_url }}" target="_blank" title="{{ publisher_title }}">More Information</a>
+                            <a class="button" href="{{ recording_url }}" target="_blank" title="{{ publisher_title }}">More Information</a>
                         </div>
                     </td>
                 </tr>
