--- a/_themes/tm3/partials/mailing-list-form.html
+++ b/_themes/tm3/partials/mailing-list-form.html
@@ -26,7 +26,7 @@
                     <input class="expand margin-half-vertical" name="email" placeholder="Email" required type="email" value="{{ value:email }}">
                 </div>
                 <div class="col-1-4">
-                    <input class="button block border light margin-half-vertical" name="message-submit-button" type="submit" value="Sign Up">
+                    <input class="button light margin-half-vertical" name="message-submit-button" type="submit" value="Sign Up">
                 </div>
             </div>
         {{ /if }}
