--- a/_themes/tm3/partials/performance.html
+++ b/_themes/tm3/partials/performance.html
@@ -16,6 +16,6 @@
     {{ /if }}
 
     {{ if performance_url }}
-    <a class="button block link u-url margin-half-vertical" href="{{ performance_url }}" target="_blank">More Information</a>
+    <a class="button block u-url margin-half-vertical" href="{{ performance_url }}" target="_blank">More Information</a>
     {{ /if }}
 </article>
