--- a/_themes/tm3/templates/adams-concerto.html
+++ b/_themes/tm3/templates/adams-concerto.html
@@ -35,7 +35,7 @@
                 {{ if pdfs }}
                 <div class="pad-vertical">
                     {{ pdfs }}
-                    <a class="button block border download margin-vertical" href="{{ download file="{pdf}" as="{pdf}" }}">{{ label }}</a>
+                    <a class="button block download margin-vertical" href="{{ download file="{pdf}" as="{pdf}" }}">{{ label }}</a>
                     {{ /pdfs }}
                 </div>
                 {{ endif }}
