--- a/_themes/tm3/css/contact.css
+++ b/_themes/tm3/css/contact.css
@@ -1,15 +1,14 @@
 .hero
 {
-    background-position: top center;
-    background-size: cover;
+    background-position: bottom center;
     margin-bottom: 24px;
-    position: relative;
 }
+
+.hero:last-of-type { margin-bottom: 0; }
 
 .tile
 {
     bottom: 0;
-    left: 0;
     position: absolute;
-    right: 0;
+    z-index: 1;
 }
