--- a/_themes/tm3/templates/home.html
+++ b/_themes/tm3/templates/home.html
@@ -32,7 +32,7 @@
     </div>
 
     <div class="row pad text-center">
-        <a class="button border" href="/performances">All Performances</a>
+        <a class="button link" href="/performances">All Performances</a>
     </div>
 
     {{ get_content from="live-recordings" show_hidden="true" }}
