Updated date format on Performances

--- a/_themes/tm3/css/buttons.css
+++ b/_themes/tm3/css/buttons.css
@@ -79,3 +79,8 @@
 .button.sample.small.positioned { margin-top: -22px; }
 
 .button.border:hover { background-color: #202020; color: #FFF; }
+
+@media (min-width: 768px)
+{
+    .button { width: auto; }
+}
