--- a/_themes/tm3/css/menu.css
+++ b/_themes/tm3/css/menu.css
@@ -2,11 +2,18 @@
 {
     background-color: rgba(0, 0, 0, 0.2);
     border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+    letter-spacing: 0.125rem;
+    line-height: 2.25rem;
+    margin: 0;
+    padding-left: 12px;
     position: fixed;
+    text-transform: uppercase;
     top: 0;
     width: 100%;
     z-index: 5;
 }
+
+#menu-toggle::before { font-size: 2.07rem; }
 
 #menu-toggle
 {
@@ -21,6 +28,8 @@
     width: 48px;
     z-index: 5;
 }
+
+.js #menu-toggle { display: block; }
 
 #menu
 {
@@ -43,7 +52,17 @@
     -webkit-overflow-scrolling: touch;
 }
 
-.js #menu-toggle { display: block; }
+#menu a
+{
+    font-weight: 400;
+}
+
+#menu [data-icon]::before
+{
+    font-size: 2rem;
+    margin-right: 16px;
+}
 
 body.checked { overflow: hidden; }
+
 body.checked #menu { width: 320px; }
