--- a/_themes/tm3/partials/recording.html
+++ b/_themes/tm3/partials/recording.html
@@ -1,16 +1,16 @@
 <article class="row" id="{{ slug }}">
     <div class="col-{{ if split_layout }}1-2{{ else }}1-3{{ /if }}">
         {{ if recording_url }}<a href="{{ recording_url }}" title="{{ publisher_title }}" target="_blank">{{ /if }}
-            <div class="row">
-                <img alt="{{ title }}" src="{{ artwork }}">
-                {{ if show_sample && sample }}<a class="button border center light sample" data-icon="play" href="{{ sample }}">Play</a>{{ /if }}
-            </div>
+        <div class="row">
+            <img alt="{{ title }}" src="{{ artwork }}">
+            {{ if show_sample && sample }}<a class="button border center light sample" data-icon="play" href="{{ sample }}">Play</a>{{ /if }}
+        </div>
         {{ if recording_url }}</a>{{ /if }}
 
-        {{ if recording_url }}<a class="button expand" href="{{ recording_url }}" target="_blank" title="{{ publisher_title }}">More Information</a>{{ /if }}
+        {{ if recording_url }}<a class="button expand link pad-half-vertical" href="{{ recording_url }}" target="_blank" title="{{ publisher_title }}">More Information</a>{{ /if }}
     </div>
     <div class="col-{{ if split_layout }}1-2{{ else }}2-3{{ /if }}">
-        <h3 class="{{ if use_title }}title{{ else }}display-1{{ /if }}">{{ title }}</h3>
+        <h3 class="{{ if use_headline }}headline{{ else }}display-1{{ /if }}">{{ title }}</h3>
 
         {{ content }}
 
@@ -41,7 +41,7 @@
 
         {{ if show_learn_more }}
         <div class="pad-vertical text-center">
-            <a class="button link" href="/recordings">Learn More</a>
+            <a class="button link" href="/recordings">All Recordings</a>
         </div>
         {{ /if }}
     </div>
