--- a/_themes/tm3/templates/adams-concerto.html
+++ b/_themes/tm3/templates/adams-concerto.html
@@ -17,31 +17,22 @@
     <div class="pad">
         <h2 class="display-1">{{ downloads_title }}</h2>
 
-        <div class="row pad-vertical">
-            <div class="col-2-3">
-                {{ if downloads }}
-                <div class="row">
-                {{ downloads }}
-                    <div class="col-1-{{ total_results }}">
-                        <a href="{{ download file="{photo_download}" as="{photo_download}" }}" title="Click to download this photo"><img alt="" src="{{ photo_download }}" /></a>
-                    </div>
-                {{ /downloads }}
+        {{ if downloads }}
+            {{ downloads }}
+            {{ if index|%:2 == 1 and index > 1 }}</div>{{ /if }}
+            {{ if index|%:2 == 1 }}<div class="row">{{ /if }}
+                <div class="col-1-2">
+                    <a href="{{ download file="{photo_download}" as="{photo_download}" }}" title="Click to download this photo"><img alt="" src="{{ photo_download }}" /></a>
                 </div>
-                {{ /if }}
-            </div>
+            {{ /downloads }}
+        {{ /if }}
 
-            <div class="col-1-3">
-                {{ get_content from="biography" }}
-                {{ if pdfs }}
-                <div class="pad-vertical">
-                    {{ pdfs }}
-                    <a class="button block download margin-vertical" href="{{ download file="{pdf}" as="{pdf}" }}">{{ label }}</a>
-                    {{ /pdfs }}
-                </div>
-                {{ endif }}
-                {{ /get_content }}
-            </div>
+        {{ get_content from="biography" }}
+        {{ theme:partial src="biography-downloads" use_context="true" }}
+        {{ /get_content }}
         </div>
+
+        {{ theme:partial src="" }}
     </div>
     {{ /if }}
 
