--- a/_themes/tm3/templates/adams-concerto.html
+++ b/_themes/tm3/templates/adams-concerto.html
@@ -52,7 +52,7 @@
 
     <div class="row pad-horizontal">
         {{ entries:listing conditions="slug:john-adams-city-noirsaxophone-concerto-david-robertsonst-louis-symphony" folder="recordings" limit="1" show_hidden="true" sort_by="datestamp" sort_dir="desc" }}
-            {{ theme:partial show_details="true" show_sample="true" src="recording" use_context="true" use_title="true" }}
+            {{ theme:partial show_details="true" show_sample="true" src="recording" use_context="true" }}
         {{ /entries:listing }}
     </div>
     {{ /if }}
