--- a/_themes/tm3/templates/home.html
+++ b/_themes/tm3/templates/home.html
@@ -8,7 +8,7 @@
     <div class="row pad-horizontal">
         <div class="col-2-3">
             {{ entries:listing folder="recordings" limit="1" show_hidden="true" sort_by="datestamp" sort_dir="desc" }}
-            {{ theme:partial src="recording" show_learn_more="true" show_sample="true" split_layout="true" use_context="true" use_headline="true" }}
+            {{ theme:partial src="recording" show_learn_more="true" show_sample="true" split_layout="true" use_context="true" }}
             {{ /entries:listing }}
         </div>
         <div class="col-1-3">
