--- a/_themes/tm3/partials/recording.html
+++ b/_themes/tm3/partials/recording.html
@@ -10,7 +10,7 @@
         {{ if recording_url }}<a class="button expand link pad-half-vertical" href="{{ recording_url }}" target="_blank" title="{{ publisher_title }}">More Information</a>{{ /if }}
     </div>
     <div class="col-{{ if split_layout }}1-2{{ else }}2-3{{ /if }}">
-        <h3 class="{{ if use_headline }}headline{{ else }}display-1{{ /if }}">{{ title }}</h3>
+        <h3 class="headline">{{ title }}</h3>
 
         {{ content }}
 
