--- a/_themes/tm3/templates/applause.html
+++ b/_themes/tm3/templates/applause.html
@@ -1,7 +1,9 @@
 {{ theme:partial half_size="true" src="hero" use_context="true" }}
 
-<main class="pad-vertical" id="content" role="main" style="background-color: {{ background_color }};">
+<main id="content" role="main" style="background-color: {{ background_color }};">
     <div class="pad">
+        <h2 class="display-1">{{ title }}</h2>
+
         <div class="row quotes">
             {{ entries:listing conditions="adams_press:!1" folder="quotes" show_hidden="true" sort_by="random" }}
                 <div class="col-1-2">
