--- a/_themes/tm3/css/quotes.css
+++ b/_themes/tm3/css/quotes.css
@@ -10,6 +10,7 @@
 .hero .quote
 {
     bottom: 0;
+    font-size: 16px;
     left: 0;
     position: absolute;
     right: 0;
@@ -17,6 +18,7 @@
 
 .quote
 {
+    font-size: 12px;
     margin: 0;
 }
 
