--- a/_themes/tm3/css/typography.css
+++ b/_themes/tm3/css/typography.css
@@ -21,62 +21,62 @@ strong { font-weight: 400; }
 /* Standard Styles */
 .display-2
 {
-    font-size: 2.250rem;
+    font-size: 2.25em;
     font-weight: 400;
     letter-spacing: 0;
-    line-height: 3.25rem;
+    line-height: 3.25em;
     margin: 0;
 }
 
 .display-1
 {
-    font-size: 2.1rem;
+    font-size: 2.1em;
     font-weight: 400;
     letter-spacing: 0;
-    line-height: 2.75rem;
+    line-height: 2.75em;
     margin: 0;
 }
 
 .headline
 {
-    font-size: 1.5rem;
-    font-weight: 400;
-    letter-spacing: 0;
-    line-height: 2.25rem;
-    margin: 0;
-}
-
-.title
-{
-    font-size: 1.35rem;
-    font-weight: 700;
-    letter-spacing: 0;
-    line-height: 1.75rem;
-    margin: 0;
-}
-
-.subhead
-{
-    font-size: 1.1rem;
+    font-size: 1.5em;
     font-weight: 400;
     letter-spacing: 0;
     line-height: 2rem;
     margin: 0;
 }
 
+.title
+{
+    font-size: 1.35em;
+    font-weight: 700;
+    letter-spacing: 0;
+    line-height: 1.75em;
+    margin: 0;
+}
+
+.subhead
+{
+    font-size: 1.1em;
+    font-weight: 400;
+    letter-spacing: 0;
+    line-height: 2em;
+    margin: 0;
+}
+
 .body-2,
 .body-1
 {
-    font-size: 1rem;
+    font-size: rem;
     letter-spacing: 0;
-    line-height: 1.5rem;
+    line-height: 1.5em;
     margin: 0;
 }
 
 .body-2
 {
     font-weight: 700;
-    line-height: 1.75rem;
+    line-height: 1.75em;
 }
 
 /* Lists */
