--- a/_themes/tm3/templates/performances.html
+++ b/_themes/tm3/templates/performances.html
@@ -1,4 +1,4 @@
-{{ theme:partial half_size="true" src="hero" use_context="true" }}
+{{ theme:partial src="hero" use_context="true" }}
 
 <main id="content" style="background-color: {{ background_color }};">
     <div class="row pad">
