--- a/_themes/tm3/css/layout.css
+++ b/_themes/tm3/css/layout.css
@@ -39,6 +39,12 @@ footer [data-icon]::before
     z-index: 1;
 }
 
+.center-layout
+{
+    margin: 0 auto;
+    max-width: 1170px;
+}
+
 .card,
 .map #performance-list
 {
