--- a/_themes/tm3/templates/biography.html
+++ b/_themes/tm3/templates/biography.html
@@ -1,7 +1,7 @@
-{{ theme:partial half_size="true" src="hero" use_context="true" }}
+{{ theme:partial src="hero" use_context="true" }}
 
-<div class="pad-vertical" style="background-color: {{ background_color }};">
-    <main id="content" role="main">
+<div id="content" style="background-color: {{ background_color }};">
+    <main class="center-layout pad" role="main">
         <h2 class="display-1">{{ title }}</h2>
 
         <div class="pad-vertical">
