--- a/_themes/tm3/templates/news.html
+++ b/_themes/tm3/templates/news.html
@@ -1,7 +1,7 @@
-{{ theme:partial half_size="true" src="hero" use_context="true" }}
+{{ theme:partial src="hero" use_context="true" }}
 
 <main id="content" role="main" style="background-color: {{ background_color }};">
-    <div id="articles">
+    <div class="center-layout" id="articles">
         <div class="row pad">
             <h2 class="display-1">{{ title }}</h2>
 
