--- a/_themes/tm3/partials/hero.html
+++ b/_themes/tm3/partials/hero.html
@@ -1,7 +1,7 @@
 <div class="row">
     <div class="hero">
         {{ if quotes }}
-        <div class="quotes">
+        <div class="quotes {{ quote_position }}">
             {{ quotes sort_by="random" }}
             {{ entries:listing conditions="url:{quote}" folder="quotes" limit="1" show_hidden="true" }}
                 {{ theme:partial src="quote" use_context="true" }}
