Layout fix on Premieres page

--- a/_themes/tm3/templates/premieres.html
+++ b/_themes/tm3/templates/premieres.html
@@ -1,7 +1,7 @@
 {{ theme:partial src="hero" use_context="true" }}
 
 <div id="content" style="background-color: {{ background_color }};">
-    <main class="center-layout pad" id="content">
+    <main class="center-layout pad">
         <h2 class="display-1">{{ title }}</h2>
 
         <div class="row">
