--- a/_themes/tm3/templates/article.html
+++ b/_themes/tm3/templates/article.html
@@ -1,8 +1,8 @@
 {{ theme:partial src="hero" short="true" use_context="true" }}
 
 <main id="content" role="main" style="background-color: {{ background_color }};">
-    <div id="articles">
-        <div class="pad">
+    <div class="center-layout" id="articles">
+        <div class="row pad">
             <h2 class="display-1">News</h2>
 
             <div class="pad-vertical">
