--- a/_themes/tm3/partials/biography-downloads.html
+++ b/_themes/tm3/partials/biography-downloads.html
@@ -1,7 +1,9 @@
 {{ if pdfs }}
-{{ pdfs }}
-<div class="row pad-half-vertical text-center">
-    <a class="button download" href="{{ download file="{pdf}" as="{pdf}" }}">{{ label }}</a>
+<div class="row">
+    {{ pdfs }}
+    <div class="col-1-2 text-center">
+        <a class="button download" href="{{ download file="{pdf}" as="{pdf}" }}">{{ label }}</a>
+    </div>
+    {{ /pdfs }}
 </div>
-{{ /pdfs }}
 {{ endif }}
