--- a/_themes/tm3/templates/recordings.html
+++ b/_themes/tm3/templates/recordings.html
@@ -1,11 +1,9 @@
 <main class="center-layout pad" id="content">
-    <div class="pad">
-        <ul class="list" id="recordings-list">
-            {{ entries:listing folder="recordings" show_hidden="true" sort_by="date" sort_dir="desc" }}
-            <li class="grid-pad recording">
-                {{ theme:partial show_details="true" show_sample="true" src="recording" use_context="true" }}
-            </li>
-            {{ /entries:listing }}
-        </ul>
-    </div>
+    <ul class="list" id="recordings-list">
+        {{ entries:listing folder="recordings" show_hidden="true" sort_by="date" sort_dir="desc" }}
+        <li class="grid-pad recording">
+            {{ theme:partial show_details="true" show_more_information="true" show_sample="true" src="recording" use_context="true" }}
+        </li>
+        {{ /entries:listing }}
+    </ul>
 </main>
