--- a/_themes/tm3/css/events.css
+++ b/_themes/tm3/css/events.css
@@ -6,6 +6,56 @@
 
 .h-event tr:first-child td { border: 0; }
 
+.h-event .dt-start
+{
+    background-color: #FFF;
+    border: 1px solid #DBDBDB;
+    height: 64px;
+    margin: 0 auto;
+    width: 64px;
+}
+
+.h-event .dt-start,
+.h-event .month,
+.h-event .day,
+.h-event .year,
+.h-event .time
+{
+    display: block;
+    text-align: center;
+}
+
+.h-event .month,
+.h-event .year,
+.h-event .time
+{
+    font-size: 12px;
+    font-weight: 700;
+    text-transform: uppercase;
+}
+
+.h-event .month
+{
+    background-color: #b0120a;
+    color: #FFF;
+}
+
+.h-event .day
+{
+    color: #202020 !important;
+    font-size: 28px;
+    font-weight: 700;
+    line-height: 28px;
+}
+
+.h-event .year
+{
+    color: #202020 !important;
+}
+
+.calendar { float: left; width: 25% !important; }
+.event-headlines { float: left; width: 75% !important; }
+
 @media (min-width: 768px)
 {
     .map #performance-list
