--- a/_themes/tm3/templates/biography.html
+++ b/_themes/tm3/templates/biography.html
@@ -7,7 +7,9 @@
         <div class="pad-vertical">
             <div class="body-1">{{ content|widont }}</div>
 
-            {{ theme:partial src="biography-downloads" use_context }}
+            <div class="pad-vertical">
+                {{ theme:partial src="biography-downloads" use_context }}
+            </div>
         </div>
     </main>
 </div>
