Calendar style tweaks

--- a/_themes/tm3/css/map.css
+++ b/_themes/tm3/css/map.css
@@ -24,7 +24,7 @@
         padding: 0;
     }
 
-    .gm-style-iw .h-event .calendar { right: -10px; }
+    /*.gm-style-iw .h-event .calendar { right: -10px; }*/
 
     .gm-style-iw .h-event dt.p-name,
     .gm-style-iw .h-event .p-location
